--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         <a class="nav-link" href="#" routerLink="home">Home</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href="#" routerLink="search">Link</a>
+        <a class="nav-link" href="#" routerLink="search">Search</a>
       </li>
     </ul>
   </div>
