--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -38,10 +38,24 @@
       </thead>
       <tbody>
         <tr *ngFor="let track of TopTracks">
-          <td>{{}}</td>
-          <td>{{track.album.name}}</td>
+          <td>
+            <img [src]="track.album.images | noimage" class="img-thumb" />
+          </td>
+          <td>{{ track.album.name }}</td>
           <td>{{ track.name }}</td>
-          <td></td>
+          <td>
+            <iframe
+              [src]="
+                track.id | domseguro: 'https://open.spotify.com/embed/track/'
+              "
+              width="300"
+              height="80"
+              frameborder="0"
+              allowtransparency="true"
+              allow="encrypted-media"
+            ></iframe>
+            <!-- <audio [src]="track.preview_url" controls></audio> -->
+          </td>
         </tr>
       </tbody>
     </table>
